[gd_scene load_steps=64 format=3 uid="uid://b3qjdg8ssqij4"]

[ext_resource type="Script" path="res://scripts/character_body_2d.gd" id="1_4gxas"]
[ext_resource type="Texture2D" uid="uid://du66gj208cl7y" path="res://assets/Player.png" id="1_wgjwb"]
[ext_resource type="Resource" uid="uid://c4u3c6xbs0rd5" path="res://inventory/playerinv.tres" id="2_dpxc4"]
[ext_resource type="FontFile" uid="uid://d0xotvs68yv05" path="res://PixelOperator8.ttf" id="3_b8ncl"]
[ext_resource type="PackedScene" uid="uid://cs5qdfaun8u0r" path="res://inventory/inv_ui.tscn" id="3_tcu0w"]
[ext_resource type="Texture2D" uid="uid://y6wxd1jg8euw" path="res://assets/Weapons/Sword2/SpriteInHand.png" id="6_shh5p"]
[ext_resource type="Script" path="res://scripts/combat_sys.gd" id="7_gbiha"]
[ext_resource type="PackedScene" uid="uid://cxf07og1vwk7x" path="res://scenes/in_game_ui.tscn" id="8_2spiq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e48g7"]
atlas = ExtResource("1_wgjwb")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6yf7"]
atlas = ExtResource("1_wgjwb")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iye6"]
atlas = ExtResource("1_wgjwb")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig235"]
atlas = ExtResource("1_wgjwb")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7iby"]
atlas = ExtResource("1_wgjwb")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_01x6v"]
atlas = ExtResource("1_wgjwb")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehxj1"]
atlas = ExtResource("1_wgjwb")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_poqi6"]
atlas = ExtResource("1_wgjwb")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qti15"]
atlas = ExtResource("1_wgjwb")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86477"]
atlas = ExtResource("1_wgjwb")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfovo"]
atlas = ExtResource("1_wgjwb")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1ph1"]
atlas = ExtResource("1_wgjwb")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo1mm"]
atlas = ExtResource("1_wgjwb")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t1ek"]
atlas = ExtResource("1_wgjwb")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7ocb"]
atlas = ExtResource("1_wgjwb")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttpv2"]
atlas = ExtResource("1_wgjwb")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o18en"]
atlas = ExtResource("1_wgjwb")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6gqh"]
atlas = ExtResource("1_wgjwb")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80scn"]
atlas = ExtResource("1_wgjwb")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2g6g"]
atlas = ExtResource("1_wgjwb")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_py4tm"]
atlas = ExtResource("1_wgjwb")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d25ga"]
atlas = ExtResource("1_wgjwb")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tmcx"]
atlas = ExtResource("1_wgjwb")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m8pa"]
atlas = ExtResource("1_wgjwb")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21u0g"]
atlas = ExtResource("1_wgjwb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfmjx"]
atlas = ExtResource("1_wgjwb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8wip"]
atlas = ExtResource("1_wgjwb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw160"]
atlas = ExtResource("1_wgjwb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nviil"]
atlas = ExtResource("1_wgjwb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p84c"]
atlas = ExtResource("1_wgjwb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nibp8"]
atlas = ExtResource("1_wgjwb")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nwmj"]
atlas = ExtResource("1_wgjwb")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtsa7"]
atlas = ExtResource("1_wgjwb")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gij6g"]
atlas = ExtResource("1_wgjwb")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2ok4"]
atlas = ExtResource("1_wgjwb")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw82r"]
atlas = ExtResource("1_wgjwb")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0x5g"]
atlas = ExtResource("1_wgjwb")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee01n"]
atlas = ExtResource("1_wgjwb")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pwea"]
atlas = ExtResource("1_wgjwb")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fy4a"]
atlas = ExtResource("1_wgjwb")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dsmo"]
atlas = ExtResource("1_wgjwb")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr7sk"]
atlas = ExtResource("1_wgjwb")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otg4q"]
atlas = ExtResource("1_wgjwb")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mejd"]
atlas = ExtResource("1_wgjwb")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocf2k"]
atlas = ExtResource("1_wgjwb")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2evx"]
atlas = ExtResource("1_wgjwb")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep3vu"]
atlas = ExtResource("1_wgjwb")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u41l"]
atlas = ExtResource("1_wgjwb")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh5c5"]
atlas = ExtResource("1_wgjwb")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tdew"]
atlas = ExtResource("1_wgjwb")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkp31"]
atlas = ExtResource("1_wgjwb")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2256"]
atlas = ExtResource("1_wgjwb")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oxjlb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e48g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6yf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iye6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig235")
}],
"loop": false,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01x6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehxj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poqi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qti15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86477")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfovo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1ph1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo1mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t1ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7ocb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttpv2")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o18en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6gqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80scn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2g6g")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_py4tm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d25ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tmcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m8pa")
}],
"loop": false,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21u0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfmjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8wip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw160")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nviil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p84c")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nibp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nwmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtsa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gij6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2ok4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw82r")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0x5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee01n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pwea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fy4a")
}],
"loop": false,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dsmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr7sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otg4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mejd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocf2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2evx")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep3vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u41l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh5c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tdew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkp31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2256")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ovvoe"]
radius = 5.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lqth6"]
radius = 13.0384

[node name="player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_4gxas")
inv = ExtResource("2_dpxc4")

[node name="inv_ui" parent="." instance=ExtResource("3_tcu0w")]
visible = false
z_index = 10
offset_left = -41.0
offset_top = -77.0
offset_right = 43.0
offset_bottom = -15.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oxjlb")
animation = &"front_attack"
autoplay = "front_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_ovvoe")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource("CircleShape2D_lqth6")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.8

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.8

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.0196078, 1, 0, 1)
offset_left = -10.0
offset_top = 8.0
offset_right = 10.0
offset_bottom = 12.0
show_percentage = false

[node name="regen_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="interact_ui" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="interact_ui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -52.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.545098, 1, 0.643137, 1)

[node name="Label" type="Label" parent="interact_ui/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -11.5
offset_right = 68.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_b8ncl")
theme_override_font_sizes/font_size = 20
text = " Press F to 	Interact "
uppercase = true

[node name="SpriteInHand" type="Sprite2D" parent="."]
visible = false
position = Vector2(-7, 5)
rotation = 1.5708
texture = ExtResource("6_shh5p")

[node name="combat_sys" type="Node2D" parent="."]
script = ExtResource("7_gbiha")

[node name="right_hand_weap_sprite" type="Sprite2D" parent="combat_sys"]

[node name="in_game_ui" parent="." instance=ExtResource("8_2spiq")]
z_index = 5

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
